# CopyPath

./: CMakeLists.txt  CopyPath.cpp  LICENSE  icon.rc  readme.md
