cmake_minimum_required (VERSION 3.8)

if (POLICY CMP0141)
  cmake_policy(SET CMP0141 NEW)
  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
endif()

project ("CopyPath")


add_executable (CopyPath "CopyPath.cpp" "icon.rc")

if (CMAKE_VERSION VERSION_GREATER 3.12)
  set_property(TARGET CopyPath PROPERTY CXX_STANDARD 20)
endif()

if (WIN32)
    target_sources(CopyPath PRIVATE ${CMAKE_SOURCE_DIR}/icon.rc)
endif()

